# mdict_rs

./: Cargo.toml  README.md
mdict/: Cargo.toml
mdict/src/: lib.rs
mdict_dump/: Cargo.toml
mdict_dump/src/: main.rs
mdict_index/: Cargo.toml  build.rs
mdict_index/migration/: init.sql
mdict_index/src/: lib.rs  sqlite.rs
mdict_server/: Cargo.toml
mdict_server/src/: main.rs
mdict_server/static/: mdict.js
mdict_simple_server/: Cargo.toml
mdict_simple_server/src/: main.rs
